# trading-system

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.databento_backtest.example.ini  config.ibkr_paper.example.ini
.github/workflows/: ci.yml  coverage-diagnostics.yml
agent/: AGENT_HANDOFF_LOG.md  AGENT_WORKFLOW.md  _build_ucrt.sh  _configure_ucrt.sh  _configure_ucrt_noibkr.sh  _phase2_build_and_test.sh  _phase2_direct_flake_check.sh  _phase2_flake_check.sh  _run_deps_build.sh  _run_project_build.sh  _run_state_logging_smoke.sh  _run_tests.sh
dependencies/ucrt64/install/lib/cmake/absl/: abslConfigVersion.cmake  abslTargets-release.cmake  abslTargets.cmake
dependencies/ucrt64/install/lib/cmake/protobuf/: protobuf-generate.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
dependencies/ucrt64/install/lib/cmake/utf8_range/: utf8_range-targets-release.cmake  utf8_range-targets.cmake
include/: config.ini
include/bench/: bench.hpp  rdtsc.hpp
include/broker/: ConnectionSupervisor.hpp  DatabentoBacktestBroker.hpp  IBKRCallbacks.hpp  IBKRClient.hpp  IBKRTransport.hpp  IBroker.hpp  LocalSimBroker.hpp  OrderLifecycle.hpp  PaperBrokerSim.hpp
include/config/: AppConfig.hpp  LiveTradingConfig.hpp
include/core/: ForecastNormalizer.h  portfolio.hpp  types.hpp
include/engine/: IEngine.hpp  LiveExecutionEngine.hpp  RankingEngine.hpp
include/execution/: ISlippageModel.h  ITransactionCostModel.h  InstitutionalTransactionCostModel.h  MarketImpactSlippageModel.h  fill_model.hpp  latency_model.hpp  score.hpp  simple_cost.hpp  simple_slippage.hpp
include/fill/: fill.hpp
include/include/broker/: ConnectionSupervisor.hpp  IBroker.hpp  PaperBrokerSim.hpp
include/include/config/: LiveTradingConfig.hpp
include/include/engine/: IEngine.hpp  LiveExecutionEngine.hpp
include/include/execution/: ITransactionCostModel.h  latency_model.hpp
include/include/models/: ou.hpp  stock.hpp
include/include/risk/: EWMAVolatility.h
include/include/sim/: simulator.hpp
include/infra/: spsc_queue.hpp
include/interfaces/: icost.hpp  islippage.hpp
include/io/: logger.hpp
include/log/: buffered_logger.hpp  event_types.hpp  logging_service.hpp  logging_state.hpp  spsc_ring.hpp  state_registry.hpp
include/models/: hawkes.hpp  l2_book.hpp  micro.hpp  ou.hpp  score.hpp  stock.hpp  symbol_universe.hpp  trade.hpp
include/risk/: EWMAVolatility.h  IVolatilityModel.h
include/scripts/: check_clang_format.sh  run_coverage.sh  run_coverage_ci.sh
include/sim/: orderbook.hpp  queue_track.hpp  queue_tracker.hpp  sim.hpp  simulator.hpp
include/tests/integration/: TestBrokerIntegration.cpp
include/tests/sim/: TestSimulator.cpp
include/tests/unit/: TestConfigAndTradeStats.cpp
include/tests/validation/: TestMoreValidationBranches.cpp
include/validation/: validation.hpp
reports/runs/: index.md
reports/runs/2026-05-03T1433_python_databento_synthetic/: manifest.json  report.md  summary.json
reports/runs/2026-05-03T2159_python_databento_synthetic_v2/: manifest.json  report.md  summary.json
reports/runs/2026-05-03T2214_python_databento_synthetic_hourly/: manifest.json  report.md  summary.json
reports/runs/2026-05-03T2242_python_databento_real_smoke/: manifest.json  report.md  summary.json
reports/runs/2026-05-16T2354_python_oneday_aapl/: manifest.json  report.md  summary.json
reports/runs/2026-05-18T0221_cpp_backtest/: config.ini  decisions.csv  manifest.json
scripts/: build_third_party_dependencies_ucrt.sh  build_vendored_ibkr.sh  build_vendored_ibkr_with_protobuf.sh  check_branch_data.py  coverage_summary.py  databento_download_l2.py  databento_download_mbp1.py  enforce_additive_only.py  format_code.sh  ibkr_historical_l1.py  local_l1_csv_provider.py  organize_runs.py  rebuild_linux_deps_ci.sh  run_coverage.sh  run_coverage_ci.sh  run_hftbacktest_databento.py  smoke_app_ci.sh  stage_third_party_sources_ucrt.sh
scripts/cmake_linux_bundle/twsapi_vendor/: CMakeLists.txt
src/: engine.cpp  main.cpp
src/app/: main.cpp
src/lib/: AppConfig.cpp  DatabentoBacktestBroker.cpp  IBKRClient.cpp  LiveExecutionEngine.cpp  LoggingService.cpp  LoggingState.cpp  RankingEngine.cpp  RealIBKRTransport.cpp  StubIBKRTransport.cpp  engine.cpp
src/tools/: ibkr_paper_order_probe.cpp
tests/common/: FakeIBKRTransport.hpp  GTestSmoke.cpp  MockIBKRTransport.hpp  MockIBroker.hpp  TestFramework.hpp  TestMain.cpp
tests/integration/: TestBrokerIntegration.cpp  TestEnginePaths.cpp  test_integration.cpp
tests/math/: TestAdditionalMath.cpp  TestMathModels.cpp  test_fill.cpp  test_hawkes.cpp  test_math.cpp  test_ou.cpp
tests/module/: TestBrokerIntegration.cpp
tests/sim/: TestMoreSimulatorBranches.cpp  TestSimulator.cpp  test_orderbook.cpp  test_sim.cpp
tests/unit/: AppConfigTest.cpp  IBKRClientTest.cpp  LiveExecutionEngineTest.cpp  LoggingStateTest.cpp  SpscRingTest.cpp  StateRegistryTest.cpp  TestCoreModels.cpp  test_common.hpp  test_fill.cpp  test_unit.cpp
tests/validation/: TestMoreValidationBranches.cpp  TestValidation.cpp
